# succinct

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
benchmark/: CMakeLists.txt  bit-vector_benchmark.cpp  csa_benchmark.cpp  delta-vector_benchmark.cpp  fast-bit-vector_benchmark.cpp  wavelet_benchmark.cpp
doc-counter/: CMakeLists.txt  doc-counter.cpp
entropy/: CMakeLists.txt  csa-entropy.cpp  ilcp-entropy  ilcp-entropy.cpp  raw-ilcp  raw-ilcp.cpp
ext/gflags/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
ext/libdivsufsort/: CMakeLists.txt
include/: balanced-wavelet.hpp  bit-iterator.hpp  bit-utils.hpp  brute-count.hpp  csa.hpp  delta-bit-vector.hpp  delta-vector.hpp  fast-bit-vector.hpp  ilcp-common.hpp  ilcp-count.hpp  int-array.hpp  mutable-bit-vector.hpp  rle-bit-vector.hpp  rle-delta-vector.hpp  rle-ilcp-count.hpp  rle-sparse-vector.hpp  rle-wavelet.hpp  rmq.hpp  rrr-bit-vector.hpp  sada-count-common.hpp  sada-count.hpp  sada-sparse-count.hpp  skewed-wavelet.hpp  small-rmq.hpp  sparse-bit-vector.hpp  sparse-int-array.hpp  sparse-vector.hpp  suffix-array.hpp  wt-csa.hpp
lib/: bit-utils.cpp  fast-bit-vector.cpp  suffix-array.cpp
libdivsufsort/: CMakeLists.txt
libdivsufsort-2.0.1/: .gitignore
src/: fast-bit-vector.cpp  suffix-array.cpp
test/: CMakeLists.txt  bit-vector_test.cpp  count_test.cpp  csa_test.cpp  delta-vector_test.cpp  int-array_test.cpp  rmq_test.cpp  suffix-array_test.cpp  wavelet_test.cpp
